[package]
name = "Nyarupad-VTS - Wanko Version"
version = "0.1.1"
edition = "2022"
authors = ["Origianl by Maruseu (@nyaruseu)  Custom fork for WankoSOBA model by EightyUser"]
[dependencies]
anyhow = "1.0.47"
directories = "4.0.1"
once_cell = "1.8.0"
parse_duration = "2.1.1"
read_color = "1.0.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
structopt = "0.3.25"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.1"
vtubestudio = "0.5.0"
raylib = "3.7.0"

[build-dependencies]
winres = "0.1"
